--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
             android:enabled="true"
             android:exported="false" />
         <service android:name=".services.WhatsAppAccessibilityService"
-                android:label="My Whatsapp Accessibility"
+                android:label="Whatsapp Automation"
                 android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
                 android:enabled="true"
-                android:exported="false">
+                android:exported="true">
                 <meta-data
                     android:name="android.accessibilityservice"
                     android:resource="@xml/whatsappservice"
