--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".scheduling.ScheduleReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="Schedule">
+                </action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
