--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,7 @@
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx4096M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
